# Fxxk_U_Claude

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  SKILL.md  pyproject.toml
scripts/: migrate.py  scan.py
src/fxxk_u_claude/: __init__.py  _yamlite.py  migrate.py  scan.py  target_profiles.yaml
tests/: test_migration.py
